tests/errors/phpdoc_no_useless_inheritdoc.php
<?php

declare(strict_types=1);

class InheritDoc
{
    /**
     * @inheritDoc
     */
    public function get(): void
    {
    }
}
